# django-base

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  implementation_plan.md  manage.py  note.md  pyproject.toml  skills-lock.json  task.md
.agent/agents/: backend-specialist.md
.agent/skills/django-ddd-clean-arch/: SKILL.md
.agent/skills/google-stitch-integration/: SKILL.md
.github/workflows/: ci.yml  security.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/scripts/: entrypoint.sh  wait-for-it.sh
src/apps/dashboard/: apps.py
src/apps/dashboard/presentation/: urls.py  views.py  views_stores.py  views_vouchers.py
src/apps/dashboard/templates/dashboard/: user_list.html
src/apps/dashboard/templates/dashboard/partials/: user_row_status.html
src/apps/dashboard/templates/dashboard/stores/: list.html
src/apps/stores/: apps.py  models.py
src/apps/stores/application/dtos/: store_dtos.py
src/apps/stores/application/use_cases/: create_store.py  list_stores.py
src/apps/stores/domain/entities/: store.py  store_member.py
src/apps/stores/domain/repositories/: store_repository.py
src/apps/stores/domain/value_objects/: role.py
src/apps/stores/infrastructure/models/: store_model.py
src/apps/stores/infrastructure/repositories/: django_store_repository.py
src/apps/stores/migrations/: 0001_initial.py  0002_alter_store_logo.py
src/apps/stores/presentation/v1/: serializers.py  urls.py  views.py
src/apps/users/: apps.py  models.py
src/apps/users/application/dtos/: user_dto.py
src/apps/users/application/services/: unit_of_work.py
src/apps/users/application/use_cases/: get_user_profile.py  list_users.py  register_user.py  toggle_user_status.py
src/apps/users/domain/entities/: user.py
src/apps/users/domain/events/: user_deactivated.py  user_registered.py
src/apps/users/domain/repositories/: user_repository.py
src/apps/users/domain/value_objects/: email.py  full_name.py
src/apps/users/infrastructure/models/: user_model.py
src/apps/users/infrastructure/repositories/: django_user_repository.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/presentation/v1/: serializers.py  urls.py  views.py
src/apps/vouchers/: apps.py  models.py
src/apps/vouchers/application/use_cases/: create_voucher.py  list_vouchers.py
src/apps/vouchers/domain/entities/: voucher.py
src/apps/vouchers/domain/repositories/: voucher_repository.py
src/apps/vouchers/domain/value_objects/: voucher_type.py
src/apps/vouchers/infrastructure/repositories/: django_voucher_repository.py
src/apps/vouchers/presentation/v1/: serializers.py  urls.py  views.py
src/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/core/base/: domain_event.py  entity.py  model.py  repository.py  use_case.py  value_object.py
src/core/exceptions/: base.py  handlers.py
src/core/health/: urls.py  views.py
src/core/middleware/: logging.py  request_id.py
src/core/pagination/: standard.py
src/core/responses/: api.py
src/static/css/: cute-dashboard.css
src/templates/: base_dashboard.html
src/templates/dashboard/vouchers/: list.html
tests/: conftest.py
tests/integration/users/: test_user_api.py
tests/unit/users/: test_user_entity.py
